2003-05-20  Mark Page <mpagenva@aol.com>

	* nsd/tclimg.c: Addition error checks in gif size read.

2003-05-19  Mark Page <mpagenva@aol.com>

	* nsd/tclinit.c: suppress byte-compile for interp init scripts
        * nsd/tclthread.c: fix fmr.

2003-05-16  Zoran Vasiljevic <zoran@archiware.com>

	* nsdb/dbinit.c: fixed hash table initialization in IncrCount
	to TCL_ONE_WORD_KEYS instead of TCL_STRING_KEYS. Credits to
	Jean-Fabrice RABAUTE for the bug report.

2003-05-14  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/tclthread.c: fixed NsTclCondObjCmd to be compatible
	to the 3.x pendant in way it threats the optional timeout
	argument. The 3.x reverted to indefinite (i.e. non-timewait) 
	condvar waits when the optional "timeout" argument was given
        as zero.
	The 4.x version just exited with NS_TIMEOUT (= 0) in such 
 	cases breaking Tcl scripts written for 3.x.
        The corrective measure is to check the passed timeout value
	and if == 0, revert to non-timewait condition waits as the
	3.x does (did).
	
2003-05-13  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_6
	
2003-05-12  Mark Page  <mpagenva@aol.com>

	* nsd/urlencode.c : (bug fix) urlencode was passing through too
        many characters unencoded.  In particular, the '+' was getting
        passed through, which causes unsymmetric encode/decode since
        '+' in encoded string translates to ' '(space).

2003-04-25  Mark Page  <mpagenva@aol.com>

	* nsd/tclvar.c (NsTclNsvArrayObjCmd): (bug fix) nsv_array exists
	must return true if an nsv exists, regardless of the number of
	array elements in the nsv.

2003-04-24  Mark Page  <mpagenva@aol.com>

	* nsd/queue.c (ConnRun): Ensure that a Internal Error status is
	returned to the client if an error status is returned from a
	pre-auth filter.  Previously, the connection was simply closed,
	causing difficult to diagnose problems to the client.  Also
	allow traces to run in this situation, so that access logging can
	occur.
